# swb-rs

./: Cargo.toml  README.md  data_stream
.github/workflows/: deploy.yml  release.yml  release_gui.yml
cli/: Cargo.toml
cli/src/: main.rs
gui/: Cargo.toml
gui/resources/packaging/macos/SpectatorMode Client.app/Contents/Resources/: AppIcon.icns
gui/src/: main.rs  test.rs
scripts/bash/: broadcast.sh  spectate.sh
scripts/cmd/: broadcast.cmd  spectate.cmd
src/: common.rs  config.rs  connection_manager.rs  console_connection.rs  dolphin_connection.rs  main.rs  slp_file_writer.rs  spectator_mode_client.rs
src/broadcast/: connection_manager.rs  console_connection.rs
src/spectate/: mod.rs  playback_dolphin.rs  slp_file_writer.rs  websocket_connection.rs
swb/: Cargo.toml  README.md  TODO
swb-cli/: Cargo.toml  README.md
swb-cli/src/: main.rs
swb-gui/: Cargo.toml  README.md  build.rs
swb-gui/resources/packaging/macos/SpectatorMode Client.app/Contents/: Info.plist
swb-gui/resources/packaging/windows/: swb-gui.rc
swb/src/: common.rs  config.rs  lib.rs  spectator_mode_client.rs
swb/src/broadcast/: connection_manager.rs  console_connection.rs  dolphin_connection.rs  mod.rs
swb/src/spectate/: playback_dolphin.rs  slp_file_writer.rs  websocket_connection.rs
