[package]
name = "swb"
version = "0.1.0"
edition = "2024"

[dependencies]
rusty_enet = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
tokio = { version = "1.45.0", features = ["full"] }
futures-util = "0.3"
clap = { version = "4.5.38", features = ["derive"] }
futures = "0.3.31"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }
signal-hook = "0.3.18"
thiserror = "2.0.12"
ezsockets = { path = "../../open_src/ezsockets" }
url = "2.5.4"
async-trait = "0.1.88"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
