[package]
name = "swb"
version = "0.3.0"
edition = "2024"

[dependencies]
rusty_enet = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
tokio = { version = "1.45.0", features = ["full", "time"] }
futures-util = "0.3"
clap = { version = "4.5.38", features = ["derive"] }
futures = "0.3.31"
thiserror = "2.0.12"
ezsockets = { git = "https://github.com/gcpreston/ezsockets.git", branch = "swb-reconnect-token", features = ["native-tls"] }
url = "2.5.4"
async-trait = "0.1.88"
tracing = "0.1.41"
tracing-subscriber = {version = "0.3.19", features = ["env-filter"] }
ctrlc = "3.4.7"
self_update = { version = "0.42.0", features = ["archive-tar", "archive-zip", "compression-flate2"] }
tokio-stream = "0.1.17"
async-channel = "2.5.0"
byteorder = "1.5.0"
ubjson-rs = { git = "https://github.com/gcpreston/ubjson_rs.git" }
async-stream = "0.3.6"
chrono = "0.4.41"
tokio-tungstenite = "0.27.0"
rand = "0.9.2"
directories = "6.0.0"
