[package]
name = "cli"
version = "0.4.1"
edition = "2024"

[dependencies]
swb = { path = "../swb" }
self_update = { version = "0.42.0", features = ["archive-tar", "archive-zip", "compression-flate2"] }
url = "2.5.4"
tracing = "0.1.41"
tracing-subscriber = {version = "0.3.19", features = ["env-filter"] }
clap = { version = "4.5.38", features = ["derive"] }
ctrlc = "3.4.7"
thiserror = "2.0.17"
futures = "0.3.31"
tokio = { version = "1.45.0", features = ["full", "time"] }
